--- a/admin_template/styles.css
+++ b/admin_template/styles.css
@@ -52,8 +52,8 @@
 }
 
 .table {
-  margin-top: 1rem;
-  margin-left: 2rem;
+  width: fit-content;
+  margin: 2rem auto;
   text-align: center;
 }
 
@@ -72,7 +72,7 @@
 }
 
 .item-list-box {
-  width: 30rem;
+  width: fit-content;
   height: 5rem;
   background-color: lightgray;
   margin: 1rem;
@@ -122,4 +122,21 @@
   width: 10rem;
   height: 3rem;
   margin-bottom: 1rem;
+}
+
+.inv_worth {
+  width: fit-content;
+  border: 3px solid red;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+}
+
+.inv_value {
+  color: green;
+}
+
+.items-info-box {
+  margin: 1rem 30%;
+  display: flex;
+  justify-content: space-between;
 }
