--- a/index.css
+++ b/index.css
@@ -72,9 +72,13 @@ a {
 .adminBtn {
     border: none;
     background-color: lightcoral;
+    border-radius: 4px;
+    border: 2px solid #333;
 }
 
 .clientBtn {
     border: none;
     background-color: lightcyan;
+    border-radius: 4px;
+    border: 2px solid #333;
 }
